refractor: Use the removeLast method